fix hero overflow overflow속성 추가하여 밖으로 튀어나오는 이미지 숨기기

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
   background-color: #555;
   border : 3px solid #fff;
   border-radius: 10px;
+  overflow: hidden;
   box-sizing: border-box;
   transform: skewX(-14deg);
   transition: background-color .5s,
